update agent and mcp